=== master

* Include migration filename in message about migration file without a single migration (jmettraux) (#1334)

* Deprecate conversion of - to _ in adapter schemes (jeremyevans)

* Don't quote function names that are SQL::Identifiers, unless SQL::Function#quoted is used (jeremyevans)

* Deprecate splitting virtual row method names (jeremyevans)

* Deprecate passing blocks to virtual row methods, move to virtual_row_method_block extension (jeremyevans)

* Deprecate Sequel::SQL::Expression#sql_literal and #lit (jeremyevans)

* Don't issue deprecation warnings on ruby 1.8.7, as Sequel 5 is dropping support for it (jeremyevans)

* Deprecate Sequel::BasicObject#remove_methods! (jeremyevans)

* Deprecate sequel/no_core_ext file (jeremyevans)

* Deprecate model dataset #insert_sql accepting model instances (jeremyevans)

* Deprecate model dataset #join_table and #graph accepting model classes (jeremyevans)

* Support :alias option to class_table_inheritance plugin, wrapping subclass datasets in a subquery to fix ambiguous column issues (jeremyevans)

* Deprecate Model.set_allowed_columns and Model#{set_all,set_only,update_all,update_only}, move to whitelist security plugin (jeremyevans)

* Do not raise MassAssignmentRestriction when setting nested attributes and using the :fields option, only check for fields given (jeremyevans)

* Do not add class methods for private methods definined in dataset_module (jeremyevans)

* Deprecate Model.def_dataset_method and Model.subset, move to def_dataset_method plugin (jeremyevans)

* Deprecate Model.finder and Model.prepared_finder, move to finder plugin (jeremyevans)

* Deprecate calling Model.db= on a model with a dataset (jeremyevans)

* Deprecate splitting symbols to look for qualified/aliased identifiers (e.g. :table__column) (jeremyevans)

* Allow optimized lookups and deletes for models using SQL::Identifier and SQL::QualifiedIdentifier values as the FROM table (jeremyevans)

=== 4.45.0 (2017-04-01)
